WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226006
REGRESSION: Safari v14.1 computes element height to be 33,554,432 pixels
https://bugs.webkit.org/show_bug.cgi?id=226006
Summary
REGRESSION: Safari v14.1 computes element height to be 33,554,432 pixels
MarkG
Reported
2021-05-19 23:08:19 PDT
Created
attachment 429138
[details]
screenshot of how jsfiddle looks in safari v14.1 vs how it should actually look Safari v14.1 (build 16611.1.21.161.6) broke the display of one of our pages. I've replicated the problem here:
https://jsfiddle.net/ao1xcs2q/
I have also attached a screenshot which shows how the jsfiddle renders on safari v14.1 (and iOS v14.5.1) and how it used to render on previous versions. The element that breaks rendering is: <small class="noteshow">This could be a YouTube or Vimeo video, or something else</small>. The css rule that causes the problem is the margin-top: -10px. Safari v14.1 renders the element as 33,554,432 pixels high, completely obscuring any following content on the page. Disabling this rule makes makes the element render as expected.
Attachments
screenshot of how jsfiddle looks in safari v14.1 vs how it should actually look
(16.44 KB, image/png)
2021-05-19 23:08 PDT
,
MarkG
no flags
Details
Test reduction
(312 bytes, text/html)
2021-05-25 11:13 PDT
,
alan
no flags
Details
Patch
(6.83 KB, patch)
2021-05-25 16:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2021-05-21 16:38:18 PDT
I can reproduce with
r277884
.
alan
Comment 2
2021-05-25 11:13:44 PDT
Created
attachment 429667
[details]
Test reduction
Radar WebKit Bug Importer
Comment 3
2021-05-25 12:44:25 PDT
<
rdar://problem/78471122
>
Radar WebKit Bug Importer
Comment 4
2021-05-25 14:22:59 PDT
<
rdar://problem/78476119
>
alan
Comment 5
2021-05-25 16:16:01 PDT
Created
attachment 429707
[details]
Patch
EWS
Comment 6
2021-05-26 06:28:09 PDT
Committed
r278080
(
238159@main
): <
https://commits.webkit.org/238159@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429707
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug